--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet" media="print">
+    <link href="css/phone.css" rel="stylesheet" media="(max-width: 480px)">
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -27,12 +28,12 @@
   </head>
 
   <body>
+  <div class="container">
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
-    <div class="container">
       <div class="hero">
         <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
       </div>
@@ -63,10 +64,11 @@
             <p>Who wants a performant pizza?</p>
           </li>
         </ul>
-    </div>
+
 
     <footer>
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
+  </div>    
   </body>
 </html>
